Fix styling of acceptance message on mobile

--- a/src/Dashboard/Dashboard.scss
+++ b/src/Dashboard/Dashboard.scss
@@ -4,6 +4,14 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
 
+    .treehacks-dashboard-message-container {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        max-height: calc(100vh - 200px);
+    }
+
 	.dashboard-design {
 		color: white;
         text-align: center;
